# rust-cookbook

./: .gitignore  Cargo.toml  README.md
libs/common/src/: lib.rs
libs/random_generator/: Cargo.toml
libs/random_generator/src/: lib.rs
libs/string_fun/: Cargo.toml
libs/string_fun/src/: lib.rs
libs/structs/src/: lib.rs  person.rs
libs/vector_sort/: Cargo.toml
libs/vector_sort/src/: lib.rs
src/: main.rs  random_generator_mod.rs  string_fun_mod.rs  vector_sort_mod.rs
